lith management dialog with custom querylist

--- a/column-builder/src/components/lith/lith.module.scss
+++ b/column-builder/src/components/lith/lith.module.scss
@@ -3,6 +3,9 @@
   width: 100%;
   min-width: 100px;
   max-width: 600px;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .segment-tooltip {
@@ -30,8 +33,33 @@
     color: black;
     font-size: 13px;
   }
-  
+
   .small {
     font-size: 11px !important;
+  }
+}
+
+.lith-dialog {
+  padding: 10px;
+  min-height: 400px;
+}
+.row {
+  display: flex;
+}
+.lith-switches {
+  list-style: none;
+  .row {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+    margin: 10px;
+    .lith-item {
+      flex-grow: 1;
+      max-width: 100px;
+    }
+    .switch {
+      flex-grow: 0;
+      display: flex;
+    }
   }
 }
