--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -4,6 +4,7 @@
   box-sizing border-box
 
 :root
+  --secondary-color: $gray3
   --accent-color: $light-gray3
   --accent-hover-color: $light-gray1
   --accent-border-color: $gray5
