Small update to usage information

--- a/src/map-interface/components/docs.module.styl
+++ b/src/map-interface/components/docs.module.styl
@@ -23,6 +23,7 @@
   margin 0 0.5em
   border-radius: 4px
   font-style italic
+  float right
   background-color: var(--ui-color-accent)
   color: var(--ui-color-accent-text)
 
