Slightly subtler shifts in map sizing

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -250,10 +250,6 @@ map-control()
     &.searching .context-stack
       width: 24em
 
-    // Adjust so that the map centers on a further left
-    // region of the screen when the context panel is not open.
-    &.context-panel-leave .map-view-container
-      margin-left: -15em
 
   .context-stack
     max-width 34em
@@ -273,7 +269,7 @@ map-control()
       width: 30em
 
   .detail-stack
-    max-width 30em
+    width 30em
     // position absolute
     // right 0px
     // top 0px
