Added more usage info

--- a/src/map-interface/components/docs.module.styl
+++ b/src/map-interface/components/docs.module.styl
@@ -8,7 +8,7 @@
 
 
   .text-panel
-    margin 1em
+    margin 0em 0.5em
     h2, h3
       // Make sure headings clear floats (for videos)
       clear both
