--- a/src/map-interface/components/docs.module.styl
+++ b/src/map-interface/components/docs.module.styl
@@ -14,6 +14,9 @@
       clear both
       display: inline-block
       width: 100%
+      margin 1em 0 0.5em
+    ul
+      margin-top 0.2em
 
 .new-swatch
   font-size 0.8em
