Added an option to turn off labels

--- a/src/map-interface/components/about.module.styl
+++ b/src/map-interface/components/about.module.styl
@@ -5,7 +5,13 @@
 
 .software-info
   background: var(--accent-color)
+  position relative
   padding 5px
   border-radius 4px
   p
     margin 0
+
+.experimental-settings-button
+  position absolute
+  top 0.2em
+  right 0.2em
