Added some new about and changelog text

--- a/src/map-interface/components/about.module.styl
+++ b/src/map-interface/components/about.module.styl
@@ -15,3 +15,15 @@
   position absolute
   top 0.2em
   right 0.2em
+
+.nav-list
+  list-style none
+  padding-left 0 !important
+  width: 50%
+  position: relative
+  margin: 0.2em 0
+  :global(.bp3-button)
+    width: 100%
+    text-align left
+    :global(.bp3-button-text)
+      flex-grow: 1
