Attempt to better model unit information

--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -4,6 +4,10 @@
   margin: 0.25em 0px 0.5em;
   display: flex;
   align-items: center;
+  .expansion-summary-title
+    margin-right: 0.8em;
+    &:after
+      content: ":";
 
 .infodrawer
   pointer-events all
