--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -5,11 +5,13 @@
 
 :root
   --secondary-color: $gray3
+  --tertiary-color: $gray5
+  --tertiary-border-color: $gray5
   --accent-color: $light-gray3
   --accent-hover-color: $light-gray1
   --accent-border-color: $gray5
-  --accent-secondary-color: #EBF1F5
-  --accent-secondary-hover-color: #F5F8FA
+  --accent-secondary-color: #F5F8FA
+  --accent-secondary-hover-color: #EBF1F5
   --ui-color-accent: rgb(252, 217, 250)
   --ui-color-accent-text: rgb(143, 39, 138)
   --box-horizontal-padding: 0.8em
