--- a/src/map-interface/components/expansion-panel/main.module.styl
+++ b/src/map-interface/components/expansion-panel/main.module.styl
@@ -1,6 +1,5 @@
 
 .panel-subhead
-  background-color: var(--accent-color)
   padding 0.2em var(--box-horizontal-padding)
   border-top 1px solid var(--accent-border-color)
   border-bottom 1px solid var(--accent-border-color)
@@ -14,10 +13,12 @@
     margin-right var(--box-horizontal-padding)
     &:last-child
       margin-right: 0
-  h1, h2, h3
+  h1, h2, h3, h4
     font-family: Montserrat,sans-serif !important;
     font-weight: 700;
     margin 0.2em 0;
+  h4
+    font-weight 600;
   .title
     flex-grow 1
 
@@ -28,17 +29,30 @@
   &.collapsed
     .expansion-panel-header
       border-bottom-width: 0;
+  .panel-subhead
+    background-color: var(--accent-color)
 
 
-  &.sub-expansion-panel
-    margin 0 calc(var(--panel-padding-h) * -1)
-    .expansion-panel-header
-      background-color var(--accent-secondary-color)
-      cursor pointer
-      &:hover
-        background-color var(--accent-secondary-hover-color)
-      padding 0.1em 0.5em
-      align-items center
+
+.sub-expansion-panel
+  margin 0 calc(var(--panel-padding-h) * -0.5)
+  border-radius 4px;
+  overflow: hidden
+  .panel-subhead
+    border-top: none
+    border-bottom: none
+  .expansion-children
+    border: 2px dotted var(--tertiary-border-color);
+    border-radius: 4px;
+    border-top: none;
+
+  .expansion-panel-header
+    backround-color: var(--tertiary-color);
+    cursor pointer
+    &:hover
+      background-color var(--accent-secondary-hover-color)
+    padding 0.1em 0.8em
+    align-items center
 
 .expansion-summary-title-help
   margin-left 5px;
