--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -55,7 +55,15 @@
   flex-grow 1
   pointer-events none
 
+.macrostrat-unit
+  h3
+    margin: 0.5em 0 0.5em;
+    flex-grow: 1;
+  .description
+    margin-right: 1em
 
+.description
+  font-style italic
 
 @media screen and (max-width: 768px)
   .infodrawer
