--- a/src/map-interface/components/info-blocks.module.styl
+++ b/src/map-interface/components/info-blocks.module.styl
@@ -1,10 +1,10 @@
 .chip
-  padding 4px 6px
-  margin-right 6px
-  margin-bottom 6px
+  padding 3px 6px
+  margin 2px 6px 2px 0
   border-radius: 5px;
   text-align: center;
-
+  &.emphasized
+    font-weight: 600;
 
 .age-chip-container {
   font-family: 'Montserrat', sans-serif;
@@ -26,12 +26,9 @@
   font-style italic
 }
 
-.lith-chip {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
+.lith-chip
   display: inline-block;
   font-size: 12px;
   background-repeat: repeat;
   background-size: cover;
-  background-color: rgba(255,255,255,0.5);
-}
+  //background-color: rgba(255,255,255,0.5);
