--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -5,7 +5,8 @@
 
 :root
   --secondary-color: $gray3
-  --tertiary-color: $gray5
+  --tertiary-background: $light-gray5
+  --tertiary-color: $light-gray4
   --tertiary-border-color: $gray5
   --accent-color: $light-gray3
   --accent-hover-color: $light-gray1
