--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -176,10 +176,7 @@ body, .main-container {
 .map-source {
   margin-top: 30px;
 }
-.map-source-attrs {
-  padding: 5px 10px 5px 10px;
-  margin-top: -15px;
-}
+
 .map-source-attr {
   display: block;
   padding-top: 10px;
@@ -223,7 +220,8 @@ body, .main-container {
 }
 
 .article {
-  padding-bottom: 15px;
+  padding: 4px 0 4px;
+  margin: 4px 0 6px;
 }
 .article-title, .article-title > a {
   font-size: 1em;
