Added a separate settings panel

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -77,8 +77,9 @@ This stylesheet the overall application page layout.
 
 .list-button
   border-radius: 4px
-  padding 0
+  padding: 0px 10px !important
   margin-bottom 4px
+
 
 // Menu
 .buttons
