--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -123,7 +123,13 @@ This stylesheet the overall application page layout.
   margin-right: -500px
 
 .panel-header.minimal
-  .tab-button:not(:hover) :global(.bp3-button-text)
+  .tab-button:not(:hover)
+    &:not(:global(.bp3-active))
+      padding-left: 0
+      padding-right: 0
+      min-width: 30px
+      width: 30px
+    :global(.bp3-button-text)
       width 0
       opacity: 0
       margin-left: -7px
