enhanced description of sourcing of strat names

--- a/column-builder/src/components/strat-name/query-list/strat-name.module.scss
+++ b/column-builder/src/components/strat-name/query-list/strat-name.module.scss
@@ -2,3 +2,9 @@
   display: flex;
   justify-content: space-between;
 }
+.source-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 150px;
+  text-align: right;
+}
