reference suggest cleanup and don't allow point editing when a poly-geom is present

--- a/column-builder/src/components/comp.module.scss
+++ b/column-builder/src/components/comp.module.scss
@@ -198,3 +198,17 @@
 .strat-dialog-bottom {
   margin: 10px;
 }
+
+/////////////// ref list item //////////////////
+.ref-author {
+  font-style: italic;
+  &::before {
+    content: "-";
+  }
+}
+.doi {
+  &::before {
+    content: "DOI: ";
+  }
+  color: rgb(86, 109, 138);
+}
