add new strat name panel

--- a/column-builder/src/components/strat-name/panel-stack/strat-name-panel.module.scss
+++ b/column-builder/src/components/strat-name/panel-stack/strat-name-panel.module.scss
@@ -13,3 +13,14 @@
 .strat-name-select {
   padding: 1px 10px 0 10px;
 }
+.bottom {
+  .new-strat-name {
+    .row {
+      display: flex;
+    }
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+  }
+  margin: 10px;
+}
