last search gets unrelated strat_names with no location information.

--- a/column-builder/src/components/strat-name/query-list/strat-name.module.scss
+++ b/column-builder/src/components/strat-name/query-list/strat-name.module.scss
@@ -18,6 +18,9 @@
 }
 .author-tag {
   margin-left: 3px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 150px;
 }
 .parent-name {
   color: #5f6b7c;
