strat-name modal changes

--- a/column-builder/src/components/comp.module.scss
+++ b/column-builder/src/components/comp.module.scss
@@ -181,6 +181,13 @@
     }
   }
 }
+.strat-title {
+  h3 {
+    margin: 0;
+  }
+  display: flex;
+  justify-content: space-between;
+}
 
 .related-strat-card {
   h3 {
