frontend clean ups

--- a/packages/column-footprint-editor/src/components/editor/main.css
+++ b/packages/column-footprint-editor/src/components/editor/main.css
@@ -2,6 +2,11 @@
 @import "~/node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css";
 @import "~/node_modules/@blueprintjs/popover2/lib/css/blueprint-popover2.css";
 
+.bp4-menu {
+  max-height: 200px;
+  overflow: scroll;
+}
+
 .column-name-text {
   font-size: 20px;
   font-weight: bold;
