Add an age-model refinement viewer to info drawer

--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -82,6 +82,12 @@
 .description
   font-style italic
 
+.age-refinement-plot
+  position relative
+  .age-refinement-bar
+    border-radius: 3px
+    margin-bottom: 1px
+
 @media screen and (max-width: 768px)
   .infodrawer
     border-radius: 0px;
