Globe actually kind of loads

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -13,6 +13,7 @@
   --accent-border-color: $gray5
   --accent-secondary-color: #F5F8FA
   --accent-secondary-hover-color: #EBF1F5
+  --main-font: "Source Sans Pro", sans-serif
   --ui-color-accent: rgb(252, 217, 250)
   --ui-color-accent-text: rgb(143, 39, 138)
   --box-horizontal-padding: 0.8em
