Globe works well enough to at least move forward

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -335,3 +335,10 @@ map-control()
 //     opacity: 1
 
 @require "./transitions.module.styl"
+
+.cesium-container
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
