A skeletal UI around rotation

--- a/src/map-interface/map-page/settings-panel.module.styl
+++ b/src/map-interface/map-page/settings-panel.module.styl
@@ -5,3 +5,13 @@
 
 .control-label-text
   margin-right: 1em
+
+.flex-row
+  align-items baseline
+  h3
+    flex: 1
+    max-width: 9em
+  display: flex
+  flex: 1
+  flex-direction: row
+  max-width: 100%
