--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -88,6 +88,9 @@
     border-radius: 3px
     margin-bottom: 1px
 
+.strat-column-container
+  min-height: 500px
+
 @media screen and (max-width: 768px)
   .infodrawer
     border-radius: 0px;
