--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -90,11 +90,12 @@
 
 .strat-column-container
   min-height: 500px
-  --timescale-level-size: 1.5em
 
   
-:global(.timescale-container)
-  width: calc(6em + 6px)
+:global
+  .timescale-container .timescale
+    width: calc(6em + 6px)
+    --timescale-level-size: 1.5em
 
 @media screen and (max-width: 768px)
   .infodrawer
