Updated dark mode colors somewhat

--- a/src/map-interface/components/card.module.styl
+++ b/src/map-interface/components/card.module.styl
@@ -29,7 +29,7 @@
   .card-header
     justify-content space-between
     padding 5px
-    border-bottom 1px solid #ddd
+    border-bottom 1px solid var(--panel-rule-color)
     height 40px
 
 @media screen and (max-width: 768px) {
