--- a/src/map-interface/components/searchbar.styl
+++ b/src/map-interface/components/searchbar.styl
@@ -51,7 +51,7 @@
   margin 0
   .searchbar
     width: 100%
-    background-color #fff
+    background-color var(--panel-background-color)
     border-radius 3px
     padding 0 5px
     display flex
