--- a/src/map-interface/components/elevation-chart/main.module.styl
+++ b/src/map-interface/components/elevation-chart/main.module.styl
@@ -7,7 +7,7 @@
   -webkit-transition: 0.8s;
   -moz-transition: 0.8s;
   transition: 0.8s;
-  background-color: #ffffff;
+  background-color: var(--panel-background-color);
   .close-button
     float: right
     margin: 0.25em
