--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -1,16 +1,18 @@
+@require "./_colors";
+
 *
   box-sizing border-box
 
 // Colors taken primarily from blueprintjs v4
 // See https://blueprintjs.com/docs/#core/colors
 :root
-  --secondary-color: #8F99A8 // gray3
-  --tertiary-background: #F6F7F9 // light gray 5
-  --tertiary-color: #EDEFF2 // light gray 4
-  --tertiary-border-color: #C5CBD3 // gray 5
-  --accent-color: #E5E8EB // light gray 3
-  --accent-hover-color: #D3D8DE // light gray 1
-  --accent-border-color: #C5CBD3 // gray5
+  --secondary-color: $gray3
+  --tertiary-background: $light-gray5
+  --tertiary-color: $light-gray4
+  --tertiary-border-color: $gray5
+  --accent-color: $light-gray3
+  --accent-hover-color: $light-gray1
+  --accent-border-color: $gray5
   --panel-background-color: #fff
   --panel-rule-color: #ddd
   --accent-secondary-color: #F5F8FA
@@ -26,24 +28,41 @@ html, body
   height -webkit-fill-available
   overflow hidden
 
+$dark-background = #141a1e
+$accent = lighten($dark-background, 10%)
+$dark-text = $gray4
+
+
+.bp4-input
+  box-shadow: 0 0 0 0 rgba(19, 124, 189, 0), 0 0 0 0 rgba(19, 124, 189, 0), inset 0 0 0 1px rgba(16, 22, 26, 0.15), inset 0 1px 1px rgba(16, 22, 26, 0.2);
+
 body
   color: var(--text-color);
   margin:0;
   padding:0;
   font-family: 'Source Sans Pro', sans-serif;
   &.bp4-dark
-    color: #ccd;
-    --text-color: #ccd
-    --panel-background-color: #222
-    --panel-rule-color: #333
-    --secondary-color: #8F99A8 // gray3
+    color: $dark-text;
+    --text-color: $dark-text
+    --panel-background-color: $dark-background
+    --accent-color: $accent // light gray 3
+    --accent-secondary-color: lighten($accent, 5%)
+    --accent-secondary-hover-color: lighten($accent, 10%)
+    --panel-rule-color: #404854
+    --secondary-color: $gray1 // gray3
     --tertiary-background: #404854 // light gray 5
     --tertiary-color: #383E47 // light gray 4
     --tertiary-border-color: #5F6B7C // gray 5
-    --accent-color: #2F343C // light gray 3
-    --accent-hover-color: #1C2127 // light gray 1
+    --accent-hover-color: lighten($accent, 5%) // light gray 1
     --accent-border-color: #5F6B7C // gray5
 
+    .bp4-card
+      background-color: var(--panel-background-color)
+
+    .bp4-input
+      &::placeholder
+        color: var(--secondary-color)
+      box-shadow: 0 0 0 0 alpha($light-gray3, 0), 0 0 0 0 alpha($light-gray3, 0), inset 0 0 0 1px alpha($light-gray1, 0.15), inset 0 1px 1px alpha($light-gray1, 0.2);
 
 body, .main-container {
   height: 100%;
