Updated dark mode

--- a/src/map-interface/components/expansion-panel/main.module.styl
+++ b/src/map-interface/components/expansion-panel/main.module.styl
@@ -22,6 +22,9 @@
   .title
     flex-grow 1
 
+// :global(.bp4-dark) .panel-subhead
+//   margin 0 1px
+
 .expansion-panel
   padding 0
   flex-wrap: wrap;
