--- a/src/map-interface/components/info-blocks.module.styl
+++ b/src/map-interface/components/info-blocks.module.styl
@@ -14,6 +14,11 @@
 .age-chip {
   display: inline-block;
 }
+
+:global(.bp4-dark) .age-chip {
+  color: #fff;
+}
+
 .age-chip-age {
   font-size: 75%;
 }
