--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -153,6 +153,7 @@ map-control()
   min-width: 22px
   min-height: 22px 
   border-radius: 4px
+  background-color: var(--panel-background-color)
   box-shadow: 0 0 0 1px rgba(16, 22, 26, 0.1), 0 0 0 rgba(16, 22, 26, 0), 0 1px 1px rgba(16, 22, 26, 0.2) !important
   //box-shadow: 0 0 0 2px rgba(0,0,0,.1)
   button
@@ -183,6 +184,27 @@ map-control()
     width: 100%
     height: 100%
 
+:global
+  .mapboxgl-ctrl.mapboxgl-ctrl-attrib
+    a
+      color: var(--text-color)
+    background-color: var(--translucent-panel-background-color) !important
+    
+
+  .mapbox-control.mapbox-zoom
+    background: var(--translucent-panel-background-color)
+    svg
+      fill: var(--text-color) !important
+
+  .mapboxgl-ctrl-logo
+    transform: scale(0.9)translate(-8px,2px)
+  .bp4-dark
+    .mapboxgl-ctrl-logo
+      filter: invert(100%)
+
+  .mapboxgl-ctrl-group button + button
+    border-top: 1px solid var(--panel-rule-color) !important
+
 .detail-stack
   position relative
 
@@ -211,10 +233,6 @@ map-control()
     margin-left: 0.5em
   :global(.mapbox-control), .map-control
     map-control()
-
-
-:global(.mapbox-control.mapbox-zoom)
-  background: rgba(255,255,255,0.2)
 
 /* For mobile phones, we want to make the most of screen space,
  which in some cases means adding complications to the basic page. */
