--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -14,6 +14,7 @@
   --accent-hover-color: $light-gray1
   --accent-border-color: $gray5
   --panel-background-color: #fff
+  --translucent-panel-background-color: rgba(255,255,255,0.2)
   --panel-rule-color: #ddd
   --accent-secondary-color: #F5F8FA
   --accent-secondary-hover-color: #EBF1F5
@@ -21,6 +22,8 @@
   --ui-color-accent-text: rgb(143, 39, 138)
   --box-horizontal-padding: 0.8em
   --text-color: #333
+  --text-subtle-color: #444
+  --text-emphasized-color: #000
 
 
 html, body
@@ -36,6 +39,12 @@ $dark-text = $gray4
 .bp4-input
   box-shadow: 0 0 0 0 rgba(19, 124, 189, 0), 0 0 0 0 rgba(19, 124, 189, 0), inset 0 0 0 1px rgba(16, 22, 26, 0.15), inset 0 1px 1px rgba(16, 22, 26, 0.2);
 
+.bp4-button
+  color: var(--text-color) !important
+
+.bp4-control
+  color: var(--text-subtle-color) !important
+
 body
   color: var(--text-color);
   margin:0;
@@ -44,7 +53,10 @@ body
   &.bp4-dark
     color: $dark-text;
     --text-color: $dark-text
+    --text-emphasized-color: #fff
+    --text-subtle-color: $gray3
     --panel-background-color: $dark-background
+    --translucent-panel-background-color: alpha($dark-background, 0.6)
     --accent-color: $accent // light gray 3
     --accent-secondary-color: lighten($accent, 5%)
     --accent-secondary-hover-color: lighten($accent, 10%)
@@ -56,13 +68,18 @@ body
     --accent-hover-color: lighten($accent, 5%) // light gray 1
     --accent-border-color: #5F6B7C // gray5
 
-    .bp4-card
-      background-color: var(--panel-background-color)
+    .bp4-card, .bp4-navbar
+      box-shadow 0 0 0 1px alpha($light-gray1, 0.15)
 
     .bp4-input
       &::placeholder
         color: var(--secondary-color)
       box-shadow: 0 0 0 0 alpha($light-gray3, 0), 0 0 0 0 alpha($light-gray3, 0), inset 0 0 0 1px alpha($light-gray1, 0.15), inset 0 1px 1px alpha($light-gray1, 0.2);
+
+.bp4-card, .bp4-navbar
+  border-radius: 4px !important
+  background-color: var(--panel-background-color) !important
+
 
 body, .main-container {
   height: 100%;
@@ -298,7 +315,7 @@ body, .main-container {
 .region-group {
   margin-top: -16px;
   font-size: 85%;
-  color: #333;
+  color: var(--secondary-color);
 }
 .region-description {
   margin-top: -5px;
