Much simpler info marker configuration

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -189,6 +189,13 @@ map-control()
     a
       color: var(--text-color)
     background-color: var(--translucent-panel-background-color) !important
+
+
+  .mapboxgl-marker svg
+    path
+      fill: var(--panel-background-color) !important
+    circle
+      fill: var(--secondary-color) !important
     
 
   .mapbox-control.mapbox-zoom
