--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -154,7 +154,8 @@ map-control()
   min-height: 22px 
   border-radius: 4px
   background-color: var(--panel-background-color)
-  box-shadow: 0 0 0 1px rgba(16, 22, 26, 0.1), 0 0 0 rgba(16, 22, 26, 0), 0 1px 1px rgba(16, 22, 26, 0.2) !important
+  box-shadow 0 0 0 1px var(--card-shadow-color) !important
+  //box-shadow: 0 0 0 1px rgba(16, 22, 26, 0.1), 0 0 0 rgba(16, 22, 26, 0), 0 1px 1px rgba(16, 22, 26, 0.2) !important
   //box-shadow: 0 0 0 2px rgba(0,0,0,.1)
   button
     width: 22px
@@ -208,6 +209,7 @@ map-control()
   .bp4-dark
     .mapboxgl-ctrl-logo
       filter: invert(100%)
+
 
   .mapboxgl-ctrl-group button + button
     border-top: 1px solid var(--panel-rule-color) !important
