--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -24,7 +24,7 @@
   --text-color: #333
   --text-subtle-color: #444
   --text-emphasized-color: #000
-  --card-shadow-color: rgba(0,0,0,0.4)
+  --card-shadow-color: rgba(17, 20, 24, 0.15) 
 
 
 html, body
