A better settings panel

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -24,7 +24,8 @@
   --text-color: #333
   --text-subtle-color: #444
   --text-emphasized-color: #000
-  --card-shadow-color: rgba(17, 20, 24, 0.15) 
+  --card-shadow-color: rgba(17, 20, 24, 0.15)
+  --error-text-color: #CD4246
 
 
 html, body
