--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -134,6 +134,10 @@ This stylesheet the overall application page layout.
       opacity: 0
       margin-left: -7px
 
+.menu-group
+  margin-bottom: 0.5em
+  margin-top: 0.2em
+
 .menu-card
   :global
     .bp4-text, .text-panel
@@ -145,8 +149,10 @@ This stylesheet the overall application page layout.
   flex-direction column
   .bp4-button-group
     margin-bottom 4px
-  margin: -4px
   margin-bottom -8px
+
+  hr
+    width 100%
 
 // Map controls
 map-control()
@@ -325,7 +331,7 @@ map-control()
     &.panel-open
       width: 34em
       margin-right 0.5em
-    &.layers
+    &.layers, &.settings
       width: 18em
       margin-right 0.5em
     // Leave a little space for Mapbox logo at the bottom
@@ -378,5 +384,6 @@ map-control()
 //     opacity: 0
 //   to
 //     opacity: 1
+
 
 @require "./transitions.module.styl"
