--- a/src/map-interface/map-page/settings-panel.module.styl
+++ b/src/map-interface/map-page/settings-panel.module.styl
@@ -2,6 +2,39 @@
   display: inline-flex
   align-items center
   justify-content: space-between
+  flex-grow: 1
 
 .control-label-text
   margin-right: 1em
+
+.info, .admonition
+  font-style: italic
+
+
+.admonition
+  color: var(--error-text-color)
+  font-size: 0.9em
+  line-height: 1em
+
+.settings
+  :global
+    .bp4-control
+      display: flex
+      width: 100%
+      align-items: center
+      .control-label
+        flex-grow: 1
+
+    .bp4-callout
+      padding: 0.5em
+      position: relative
+
+    .bp4-button, .bp4-button-group
+      display: block
+      width: 100%
+      margin: 0.1em 0 0.2em
+      justify-content: start
+      //box-shadow: 0 0 0px 1px var(--card-shadow-color)
+      border-radius: 2px
+  
+  
