--- a/src/map-interface/map-page/settings-panel.module.styl
+++ b/src/map-interface/map-page/settings-panel.module.styl
@@ -36,5 +36,18 @@
       justify-content: start
       //box-shadow: 0 0 0px 1px var(--card-shadow-color)
       border-radius: 2px
-  
-  
+
+.callout-panel
+  border-radius: 3px
+  overflow: hidden
+  &.expanded
+    .callout-header
+      :global(.bp4-button)
+        border-bottom-left-radius: 0
+        border-bottom-right-radius: 0
+        margin-bottom: 0
+  :global(.bp4-callout)
+    border-top-left-radius: 0
+    border-top-right-radius: 0
+    &>:last-child
+      margin-bottom: 0
