--- a/src/map-interface/components/buttons.module.styl
+++ b/src/map-interface/components/buttons.module.styl
@@ -1,4 +1,5 @@
 .list-button
-  border-radius: 4px
-  padding: 0px 10px !important
-  margin-bottom 4px
+  display: flex
+  margin-bottom: 3px
+  padding: 0px 8px !important
+  
