--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -42,7 +42,7 @@ $dark-text = $gray4
   box-shadow: 0 0 0 0 rgba(19, 124, 189, 0), 0 0 0 0 rgba(19, 124, 189, 0), inset 0 0 0 1px rgba(16, 22, 26, 0.15), inset 0 1px 1px rgba(16, 22, 26, 0.2);
 
 .bp4-button
-  color: var(--text-color) !important
+  color: var(--text-color)
 
 .bp4-control
   color: var(--text-subtle-color) !important
