Reformatted lat-lon description

--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -51,6 +51,9 @@
     align-items baseline
     margin-right 1em
 
+  .secondary
+    color: var(--text-subtle-color)
+
   &.loading
     .infodrawer-body
       overflow-y: hidden
