--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -40,19 +40,17 @@
     display flex
     flex-direction row
     align-items: center
+    gap: 0.5em;
     .spacer
       flex-grow 1
     .left-icon
       padding 7px
 
-  .infodrawer-header
-    display flex
-    flex-direction row
-    align-items baseline
-    margin-right 1em
-
-  .secondary
-    color: var(--text-subtle-color)
+  .infodrawer-header-item
+    margin-left: 0.5em
+    .secondary
+      font-size: 0.9em
+      color: var(--text-subtle-color)
 
   &.loading
     .infodrawer-body
