--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -46,6 +46,15 @@
     .left-icon
       padding 7px
 
+    .position-controls :global(.bp4-button)
+      font-size: 12px
+
+
+    .copy-link-button:global(.bp4-minimal.bp4-button)
+      color: var(--text-subtle-color)
+      svg
+        fill: var(--text-subtle-color)
+
   .infodrawer-header-item
     margin-left: 0.5em
     .secondary
