--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -157,7 +157,7 @@ map-control()
   min-height: 22px 
   border-radius: 4px
   background-color: var(--panel-background-color)
-  box-shadow 0 0 0 1px var(--card-shadow-color) !important
+  box-shadow 0 0 0 1px var(--card-shadow-color)
   //box-shadow: 0 0 0 1px rgba(16, 22, 26, 0.1), 0 0 0 rgba(16, 22, 26, 0), 0 1px 1px rgba(16, 22, 26, 0.2) !important
   //box-shadow: 0 0 0 2px rgba(0,0,0,.1)
   button
@@ -263,6 +263,16 @@ map-control()
     margin-left: 0.5em
   :global(.mapbox-control), :global(.map-control-wrapper), .map-control
     map-control()
+
+  .map-scale-control
+    background: none
+    box-shadow: none
+    padding-top: 8px
+    :global(.mapboxgl-ctrl-scale)
+      background-color: var(--translucent-panel-background-color)
+      border-color: var(--secondary-text-color)
+      color: var(--secondary-text-color)
+
 
 /* For mobile phones, we want to make the most of screen space,
  which in some cases means adding complications to the basic page. */
