--- a/src/map-interface/components/card.module.styl
+++ b/src/map-interface/components/card.module.styl
@@ -26,6 +26,7 @@
     justify-content: flex-start
     flex 1
     min-width: 0
+    overflow-x: hidden
   .card-header
     justify-content space-between
     padding 5px
