Updated panel styles

--- a/src/map-interface/components/docs.module.styl
+++ b/src/map-interface/components/docs.module.styl
@@ -34,6 +34,8 @@
 :global
 
   .text-panel
+    p, ul, ol
+      hyphens: auto
     img, video
       border-radius: 6px
       box-shadow: 0 0 6px var(--card-shadow-color)
