--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -70,6 +70,8 @@ body
     --accent-hover-color: lighten($accent, 4%) // light gray 1
     --accent-border-color: #5F6B7C // gray5
     --card-shadow-color: alpha($gray1, 0.4)
+    --ui-color-accent-text: rgb(252, 217, 250)
+    --ui-color-accent: darken(rgb(143, 39, 138), 50%)
 
     .bp4-card, .bp4-navbar
       box-shadow 0 0 0 1px var(--card-shadow-color)
