--- a/src/map-interface/components/filter-panel/filters.module.styl
+++ b/src/map-interface/components/filter-panel/filters.module.styl
@@ -13,8 +13,11 @@
     align-items: center
     justify-content: space-between
     gap: 0.5em
-    padding: 0 0.5em
+    padding: 0 4px 0 0.5em
     width: 100%
+    button
+      min-width: 16px
+      min-height: 16px
     .spacer
       flex-grow: 1
     
@@ -35,3 +38,46 @@
   align-items: baseline;
   justify-content: space-between;
   margin: 5px;
+
+
+// Should be maybe moved to a card-specific location
+
+.filter-names {
+  margin-bottom: 0px;
+}
+
+.filter-name-container
+  display: flex
+  justify-content: space-between
+  align-items: center
+  &>*
+    margin-right: 0.5em
+  margin-right: -0.5em
+
+.filter-tongue {
+  background-color: #def1ff;
+  margin: 5px
+  margin-top: -12px;
+  padding: 0
+  padding-top: 12px
+}
+
+.filters
+  padding: 4px 6px;
+
+
+.filter-tongue-actions{
+  display: flex;
+  align-items: center;
+  margin-left: 15px;
+  white-space: nowrap;
+}
+
+@media screen and (max-width: 768px) {
+  .filter-tongue{
+    max-width: 100vw;
+    margin: 0;
+    border-radius: 0;
+    margin-top: -3px;
+  }
+}
