--- a/src/map-interface/components/docs.module.styl
+++ b/src/map-interface/components/docs.module.styl
@@ -65,13 +65,15 @@
   background-color: var(--ui-color-accent)
   color: var(--ui-color-accent-text)
 
+h2.version .version-name
+  background-color: var(--ui-color-accent)
+  border-radius: 4px
+
 .version
   .version-name
     display inline-block
     padding: 0.25em 0.5em
     margin-right 0.5em
-    border-radius: 4px
-    background-color: var(--ui-color-accent)
     color: var(--ui-color-accent-text)
     code
       font-size 0.9em
