Column style additions

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -528,6 +528,12 @@ td {
   text-align: center;
 }
 
+.flex-row
+  display flex
+  flex-direction row
+  align-items center
+  justify-content space-between
+
 .spacer
   flex-grow 1
 
