--- a/src/map-interface/components/info-drawer/strat-column/strat-column.module.styl
+++ b/src/map-interface/components/info-drawer/strat-column/strat-column.module.styl
@@ -1,8 +1,9 @@
 .strat-column-container
   min-height: 500px
+  padding: 0 1em 1em
+  --background-color: var(--panel-background-color)
 
 :global
   .timescale-container .timescale
     width: calc(6em + 6px)
     --timescale-level-size: 1.5em
-
